fix footer overlap bug

--- a/src/app/components/footer/footer.module.css
+++ b/src/app/components/footer/footer.module.css
@@ -8,9 +8,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
-    position: relative;
-    bottom: 0;
 }
 
 .footer_sections {
